<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_ubicacion">

    <fragment
        android:id="@+id/nav_ubicacion"
        android:name="com.example.inmobiliariamovil.ui.ubicacion.UbicacionFragment"
        android:label="@string/menu_ubicacion"
        tools:layout="@layout/fragment_ubicacion" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.inmobiliariamovil.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_inmuebles"
        android:name="com.example.inmobiliariamovil.ui.inmuebles.InmueblesFragment"
        android:label="@string/menu_inmuebles"
        tools:layout="@layout/fragment_inmuebles" >
        <action
            android:id="@+id/action_nav_inmuebles_to_inmuebleFragment"
            app:destination="@id/inmuebleFragment" />
        <action
            android:id="@+id/action_nav_inmuebles_to_crearInmuebleFragment"
            app:destination="@id/crearInmuebleFragment" />
    </fragment>
    <fragment
        android:id="@+id/inmuebleFragment"
        android:name="com.example.inmobiliariamovil.ui.inmuebles.InmuebleFragment"
        android:label="Inmueble"
        tools:layout="@layout/fragment_inmueble" >
        <action
            android:id="@+id/action_inmuebleFragment_to_nav_inmuebles"
            app:destination="@id/nav_inmuebles" />
    </fragment>
    <fragment
        android:id="@+id/nav_cerrarsesion"
        android:name="com.example.inmobiliariamovil.ui.salir.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
    <fragment
        android:id="@+id/nav_inquilinos"
        android:name="com.example.inmobiliariamovil.ui.inquilinos.InquilinosFragment"
        android:label="@string/menu_inquilinos"
        tools:layout="@layout/fragment_inquilinos" >
        <action
            android:id="@+id/action_nav_inquilinos_to_inquilinoFragment"
            app:destination="@id/inquilinoFragment" />
    </fragment>
    <fragment
        android:id="@+id/inquilinoFragment"
        android:name="com.example.inmobiliariamovil.ui.inquilinos.InquilinoFragment"
        android:label="Inquilino"
        tools:layout="@layout/fragment_inquilino" >
        <action
            android:id="@+id/action_inquilinoFragment_to_nav_inquilinos"
            app:destination="@id/nav_inquilinos" />
    </fragment>
    <fragment
        android:id="@+id/nav_contratos"
        android:name="com.example.inmobiliariamovil.ui.contratos.ContratosFragment"
        android:label="@string/menu_pagos"
        tools:layout="@layout/fragment_contratos" >
        <action
            android:id="@+id/action_nav_contratos_to_contratoFragment"
            app:destination="@id/contratoFragment" />
    </fragment>
    <fragment
        android:id="@+id/pagosFragment"
        android:name="com.example.inmobiliariamovil.ui.contratos.PagosFragment"
        android:label="Detalle de Pagos"
        tools:layout="@layout/fragment_pagos" >
        <action
            android:id="@+id/action_pagosFragment_to_contratoFragment"
            app:destination="@id/contratoFragment" />
    </fragment>
    <fragment
        android:id="@+id/contratoFragment"
        android:name="com.example.inmobiliariamovil.ui.contratos.ContratoFragment"
        android:label="Contrato"
        tools:layout="@layout/fragment_contrato" >
        <action
            android:id="@+id/action_contratoFragment_to_nav_contratos"
            app:destination="@id/nav_contratos" />
        <action
            android:id="@+id/action_contratoFragment_to_pagosFragment"
            app:destination="@id/pagosFragment" />
    </fragment>
    <fragment
        android:id="@+id/crearInmuebleFragment"
        android:name="com.example.inmobiliariamovil.ui.inmuebles.CrearInmuebleFragment"
        android:label="Crear Inmueble"
        tools:layout="@layout/fragment_crear_inmueble" >
        <action
            android:id="@+id/action_crearInmuebleFragment_to_nav_inmuebles"
            app:destination="@id/nav_inmuebles" />
    </fragment>
</navigation>